# cpp-pbni-framework

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: mirror.yml  release.yml  tests.yml
docs/: errors.md  index.md  libraries.md  powerbuilder.md  quick-start.md  variables.md
src/: Framework.cpp  Framework.h  PBObjects.h
test/cpp/: CMakeLists.txt  conanfile.py
test/pb/: exf1.pbl  test.pbl  tst1.pbl
